--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
     <toolbar-component></toolbar-component>
     <div class="row">
     	<navigation-component *ngIf="isUserLoggedIn()"></navigation-component>
-    	<main [ngClass]="{'offset-sm-3 offset-md-3':isUserLoggedIn()}" class="col-sm-9 col-md-9 pt-3"><router-outlet></router-outlet></main>
+    	<main [ngClass]="{'offset-sm-3 offset-md-3':isUserLoggedIn()}" class="content-container col-sm-9 col-md-9 pt-3"><router-outlet></router-outlet></main>
     </div>
 </div>
