--- a/src/dashboard/dashboard.component.html
+++ b/src/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="dashboard-component">
     <h1>Dashboard</h1>
     <div class="row">
         <div class="col-6 col-sm-3 placeholder">
