--- a/src/styles/biq.scss
+++ b/src/styles/biq.scss
@@ -47,7 +47,7 @@ h1 {
     padding: 20px;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-    border-right: 1px solid #eee;
+    // border-right: 1px solid #eee;
 
     padding-left: 0;
     padding-right: 0; 
