--- a/src/messages/messages.component.scss
+++ b/src/messages/messages.component.scss
@@ -18,6 +18,17 @@
 
         }
 
+        .avatar {
+            margin-top: 8px;
+            margin-bottom: 8px;
+            margin-right: 16px;
+            border-radius: 50%;
+            box-sizing: content-box;
+
+            width: 40px;
+            height: 40px;
+        }
+
         .list-group {
 
             .list-group-item:first-child {
@@ -27,6 +38,30 @@
             .list-group-item {
                 border: 0;
             }
+
+        }
+
+        .status-circle {
+          background-color: #757575;
+          border-radius: 25px;
+          position: absolute;
+        top: 48px;
+        left: 52px;
+          width: 10px;
+          height: 10px;
+          border: 2px solid #fff;
+
+          &.online {
+            background-color: #3CFF2F;
+          }
+
+          &.offline {
+            background-color: #FF2F2F;
+          }
+
+          &.away {
+            background-color: #FFB52F;
+          }
 
         }
 
