--- a/src/toolbar/toolbar.component.scss
+++ b/src/toolbar/toolbar.component.scss
@@ -1,9 +1,24 @@
 .toolbar-component {
     background-color: #fff;
 
+    search-autocomplete-component {
+        width: 260px;
+    }
+
     .navbar-toggler-icon {
         color: #000;
         background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+    }
+
+    .nav-item {
+        padding-left: 10px;
+
+        &.active {
+            background-color: #0275d8;
+            .nav-link {
+                color: #fff;
+            }
+        }
     }
 
     .toolbar-search-input {
@@ -22,6 +37,13 @@
             background: 0 0;
             width: 100%;
             padding-left: 0;
+        }
+    }
+
+    .collapse {
+        .toolbar-search-input {
+            padding-left: 0;
+            border: 1px solid #ccc;
         }
     }
 
