Fixed module loading

--- a/src/users/users.component.scss
+++ b/src/users/users.component.scss
@@ -1,6 +1,7 @@
 .users-component {
     background-color: #fff;
     position: relative;
+    height: 100%;
 
     .user-list {
         padding: 0px;
