--- a/src/messages/messages.component.scss
+++ b/src/messages/messages.component.scss
@@ -1,6 +1,7 @@
 .messages-component {
     background-color: #fff;
     position: relative;
+    height: 100%;
 
     .user-list {
         padding: 0px;
