Adding chart to dashboard

--- a/src/dashboard/dashboard.component.scss
+++ b/src/dashboard/dashboard.component.scss
@@ -1,5 +1,12 @@
 @import '../styles/theme';
 
 .dashboard-component {
-    
+    margin-top: 70px;
+    padding: 10px;
+    padding-right: 10px;
+
+    .sales-card {
+        // margin: 10px;
+    }
+
 }
