--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,8 +1,11 @@
+
+@import './components/titles';
 @import './components/boxshadows';
 @import './components/images';
 @import './components/buttons';
 @import './components/inputs';
 @import './components/cards';
+@import './components/charts';
 
 .row.full {
     height: 100%;
