--- a/src/dashboard/dashboard.component.html
+++ b/src/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
-<div class="dashboard-component">
-    <h1>Dashboard</h1>
+<div class="dashboard-component page p-20">
+    <div class="row"><h1>Dashboard</h1></div>
 
     <div class="row">
         <div class="col-12 card sales-card z-index-1">
