--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,11 +1,14 @@
 
 @import './components/titles';
+@import './components/page';
 @import './components/boxshadows';
 @import './components/images';
 @import './components/buttons';
 @import './components/inputs';
 @import './components/cards';
 @import './components/charts';
+@import './components/tables';
+@import './components/utilites';
 
 .row.full {
     height: 100%;
