--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,7 @@
         background-color: $background-color;
         width: 100%;
         height: 100%;
+        padding-top: 60px;
 
         &.pad {
             padding: 20px;
