--- a/src/login/login.component.html
+++ b/src/login/login.component.html
@@ -14,7 +14,7 @@
           <label for="rememberme">Remember Me</label>
         </div>
 
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" [disabled]="!loginForm.valid">Sign in</button>
       </form>
     </div>
   </div>
