--- a/src/login/login.component.html
+++ b/src/login/login.component.html
@@ -17,5 +17,6 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit" [disabled]="!loginForm.valid">Sign in</button>
       </form>
     </div>
+    <div class="signup-link"><a [routerLink]="'/signup'">Signup</a></div>
   </div>
 </div>
