--- a/src/login/login.component.scss
+++ b/src/login/login.component.scss
@@ -35,4 +35,13 @@
         }
 
     }
+
+    .signup-link {
+        max-width: 350px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        margin-top: 10px;
+    }
+
 }
