--- a/src/signup/signup.component.scss
+++ b/src/signup/signup.component.scss
@@ -1,3 +1,43 @@
-.login-component {
-    
+.signup-component {
+    width: 100%;
+    height: 100%;
+
+    .card {
+        max-width: 350px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10%;
+
+        .logo {
+            padding-top: 10px;
+            padding-bottom: 10px;
+
+            img {
+                margin-left: auto;
+                margin-right: auto;
+                display: block;
+            }
+        }
+
+        form {
+            margin-top: 30px;
+            margin-bottom: 20px;
+            max-width: 350px;
+
+            input {
+                margin-bottom: 15px;
+            }
+
+        }
+
+    }
+
+    .login-link {
+        max-width: 350px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        margin-top: 10px;
+    }
+
 }
