Added form wizard

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -4,8 +4,10 @@
 @import './components/buttons';
 @import './components/inputs';
 @import './components/cards';
+@import './components/wizard';
 @import './components/charts';
 @import './components/tables';
+@import './components/checkanimation';
 @import './components/utilites';
 
 .row.full {
