--- a/src/styles/components/cards.scss
+++ b/src/styles/components/cards.scss
@@ -2,4 +2,16 @@
      background-color: #fff;
      border-radius: 0px;
      padding: 10px;
+
+    &.w-actions {
+        padding-bottom: 50px !important;
+    }
+
+    .card-actions {
+        position: absolute;
+        bottom: 10px;
+        background-color: #fff;
+        width: 100%;
+    }
+
 }
