Adjusted sizing of search bar

--- a/src/toolbar/toolbar.component.html
+++ b/src/toolbar/toolbar.component.html
@@ -2,11 +2,11 @@
   <button class="navbar-toggler navbar-toggler-right hidden-md-up" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="#">Dashboard</a>
+  <div class="col-md-2 col-sm-4 col-lg-3"><a class="navbar-brand" href="#">Dashboard</a></div>
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
 
-    <ul class="navbar-nav mr-auto hidden-xs-down"></ul>
+    <!-- <ul class="navbar-nav mr-auto hidden-xs-down"></ul> -->
 
     <ul class="navbar-nav mr-auto hidden-sm-up" *ngIf="isUserLoggedIn()">
       <li class="nav-item" *ngFor="let page of pages" [ngClass]="{'active': getCurrentRoute() === page.route }">
@@ -25,14 +25,9 @@
         <a class="nav-link" [routerLink]="['/signup']">Signup</a>
       </li>
     </ul>
-    <search-autocomplete-component class="mt-2 mt-md-0 mr-auto"></search-autocomplete-component>
-    <!-- <form class="form-inline mt-2 mt-md-0 mr-auto" *ngIf="isUserLoggedIn()" (ngSubmit)="doSearchSubmit()">
-      <div class="toolbar-search-input input-group mb-2 mr-sm-2 mb-sm-0">
-        <div class="input-group-addon"><i class="fa fa-search" aria-hidden="true"></i></div>
-        <input type="text" class="form-control mr-sm-2" id="inlineFormInputGroup" placeholder="Search...">
-      </div>
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form> -->
+    
+    <search-autocomplete-component class="col-lg-6 col-md-6 col-sm-4 col-xs-4 mt-2 mt-md-0 mr-auto"></search-autocomplete-component>
+
     <ul class="navbar-nav" *ngIf="isUserLoggedIn()">
       <li><img class="avatar sm" src="/assets/img/profiles/profile1.jpg">
       <li class="nav-item" >
