--- a/src/toolbar/toolbar.component.scss
+++ b/src/toolbar/toolbar.component.scss
@@ -2,7 +2,7 @@
     background-color: #fff;
 
     search-autocomplete-component {
-        width: 260px;
+        width: 100%;
     }
 
     .navbar-toggler-icon {
