Added social dashboard widgets

--- a/src/dashboard/dashboard.component.html
+++ b/src/dashboard/dashboard.component.html
@@ -6,4 +6,9 @@
             <sales-chart></sales-chart>
         </div>
     </div>
+
+    <div class="row">
+        <social-facebook-chart class="col-6 card social-card"></social-facebook-chart>
+        <social-twitter-chart class="col-6 card social-card"></social-twitter-chart>
+    </div>
 </div>
