--- a/src/dashboard/saleschart/saleschart.component.scss
+++ b/src/dashboard/saleschart/saleschart.component.scss
@@ -1,4 +1,11 @@
 .saleschart-component {
     height: 300px;
     width: 100%;
+
+    h2 {
+        position: absolute;
+        top: 10px;
+        left: 20px;
+    }
+
 }
