--- a/src/dashboard/social/facebook/social-facebook-chart.component.html
+++ b/src/dashboard/social/facebook/social-facebook-chart.component.html
@@ -1,7 +1,7 @@
-<div class="saleschart-component">
-    <h2>Sales</h2>
+<div class="social-facebook-chart-component">
+    <h4>Facebook</h4>
     <x-chartist
-        class="generic"
+        class="white"
         [data]="data"
         [type]="type"
         [options]="options">
