--- a/src/styles/components/charts.scss
+++ b/src/styles/components/charts.scss
@@ -1,5 +1,5 @@
 //Chartist Charts
-x-chartist {
+x-chartist.generic {
     .ct-grids {
         opacity: 0;
     }
@@ -19,4 +19,32 @@ x-chartist {
         fill: #10A1CF;
         fill-opacity: 0.75;
     }
+}
+
+//Chartist Charts
+x-chartist.white {
+    .ct-grids {
+        opacity: 0;
+    }
+
+    .ct-series-a .ct-bar, .ct-series-a .ct-line, .ct-series-a .ct-point, .ct-series-a .ct-slice-donut {
+        stroke: #ffffff;
+    }
+    .ct-series-a .ct-area, .ct-series-a .ct-slice-pie {
+        fill: #ffffff;
+        fill-opacity: 0.75;
+    }
+
+    .ct-series-b .ct-bar, .ct-series-b .ct-line, .ct-series-b .ct-point, .ct-series-b .ct-slice-donut {
+      stroke: #ffffff;
+    }
+    .ct-series-b .ct-area, .ct-series-b .ct-slice-pie {
+        fill: #ffffff;
+        fill-opacity: 0.75;
+    }
+
+    .ct-chart-bar .ct-label, .ct-chart-line .ct-label {
+        color: #fff;
+    }
+
 }
