--- a/src/toolbar/toolbar.component.html
+++ b/src/toolbar/toolbar.component.html
@@ -2,7 +2,7 @@
   <button class="navbar-toggler navbar-toggler-right hidden-md-up" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="col-md-2 col-sm-4 col-lg-3"><a class="navbar-brand" href="#">Dashboard</a></div>
+  <div class="col-sm-3 col-md-3 col-lg-2"><a class="navbar-brand" href="#">Dashboard</a></div>
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
 
