Fixed login page margin

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,8 +9,9 @@
         height: 100%;
         margin-top: 60px;
 
-        &.pad {
+        &.loggedin {
             padding: 20px;
+            margin-top: 0px;
         }
 
     }
