--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
     <toolbar-component *ngIf="isUserLoggedIn()"></toolbar-component>
     <div class="row full">
     	<navigation-component *ngIf="isUserLoggedIn()"></navigation-component>
-    	<main [ngClass]="{'col-sm-9 col-md-9 col-lg-10 offset-sm-3 offset-md-3 offset-lg-2':isUserLoggedIn(),'col-12 pad':!isUserLoggedIn()}" class="content-container"><router-outlet></router-outlet></main>
+    	<main [ngClass]="{'col-sm-9 col-md-9 col-lg-10 offset-sm-3 offset-md-3 offset-lg-2':isUserLoggedIn(),'col-12 loggedin':!isUserLoggedIn()}" class="content-container"><router-outlet></router-outlet></main>
     </div>
 </div>
