Fixed wizard for responsive look

--- a/src/wizard/wizard.component.html
+++ b/src/wizard/wizard.component.html
@@ -7,7 +7,7 @@
     <div class="bs-wizard">
       <div class="row">
 
-        <div class="col-xs-12 col-md-4 bs-wizard-step {{step.status}}" *ngFor="let step of steps">
+        <div class="col-4 bs-wizard-step {{step.status}}" *ngFor="let step of steps">
           <div class="text-center bs-wizard-stepnum">{{step.label}}</div>
           <div class="progress">
             <div class="progress-bar"></div>
