--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,7 @@
     height: 100%;
 
     .content-container {
-        background-color: $background-color;
+        background-color: $body-bg;
         width: 100%;
         height: 100%;
         margin-top: 60px;
