--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+@import './styles/theme.scss';
 @import './../node_modules/bootstrap/scss/bootstrap.scss';
-@import './styles/main.scss';
+@import './styles/_main.scss';
