--- a/src/dashboard/saleschart/saleschart.component.html
+++ b/src/dashboard/saleschart/saleschart.component.html
@@ -1,9 +1,13 @@
 <div class="saleschart-component">
     <h2>Sales</h2>
-    <x-chartist
-        class="generic"
-        [data]="data"
-        [type]="type"
-        [options]="options">
-    </x-chartist>
+    <canvas baseChart 
+            class="chart"
+            [datasets]="lineChartData"
+            [labels]="lineChartLabels"
+            [options]="lineChartOptions"
+            [colors]="lineChartColors"
+            [legend]="lineChartLegend"
+            [chartType]="lineChartType"
+            (chartHover)="chartHovered($event)"
+            (chartClick)="chartClicked($event)"></canvas>
 </div>
