Adding modals page

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -5,6 +5,7 @@
 @import './components/inputs';
 @import './components/cards';
 @import './components/wizard';
+@import './components/modals';
 @import './components/charts';
 @import './components/tables';
 @import './components/checkanimation';
